# keybound-backend

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  SWAGGER_HELP.md  compose.yml  daily-standup.md  deny.toml  docker-compose.yml  justfile  rendered.yaml  temp-deployment.yaml  test-flow.md  upgrade.md
.github/: WORKFLOW_OPTIMIZATION.md
.opencode/: PROJECT-EXECUTION.md  QUICKSTART.md  README.md  STRUCTURE.md  config.json
.roo/: mcp.json
app/crates/backend-auth/: Cargo.toml
app/crates/backend-auth/src/: http_client.rs  jwt_token.rs  lib.rs  middleware.rs  oidc_state.rs  signature_principal.rs
app/crates/backend-auth/tests/: jwt_auth_exclude_paths.rs  oidc_wiremock_e2e.rs  signature_verification.rs
app/crates/backend-migrate/: Cargo.toml
app/crates/backend-migrate/migrations/: 20260203000001_app_user.sql  20260203000002_kyc_case_and_submission.sql  20260203000007_device_approval_sms.sql  20260203000008_add_indices.sql
app/crates/backend-migrate/migrations/20260203000002_kyc_case_and_submission/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260203000003_documents/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260203000006_fineract_provisioning/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260203000007_device_approval_sms/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260216000001_consolidate_kyc/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260216000002_fix_sms_schema/: up.sql
app/crates/backend-migrate/migrations/20260217000001_remove_persisted_tiers/: down.sql
app/crates/backend-migrate/migrations/20260219000001_device_pk/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260219000002_rebuild_kyc_storage/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260219100100_rename_kyc_step_type_column/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260227110000_phone_deposit/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260305090000_full_name_user/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260313153000_split_email_magic_kind/: down.sql  up.sql
app/crates/backend-migrate/src/: migrate.rs
compose/: keycloak.compose.yml  redis.compose.yml  tools.compose.yml
config/: default.yaml  dev-compose.yml  dev.yaml  e2e.auth-disabled.yaml  e2e.blank-bff-path.yaml  e2e.yaml  frontend-mobile-config.json
crates/backend-repository/: Cargo.toml
crates/backend-repository/queries/bff/: list_kyc_documents.sql
crates/backend-repository/queries/staff/: list_kyc_submissions.sql
crates/backend-repository/src/: pg.rs  traits.rs
docs/: CUCUMBER-TESTING.md  architecture.md  id_document_test_implementation.md  id_document_test_plan.md  index.md  stabilization_report.md  whatsapp_fallback_plan.md  whatsapp_integration.md  whatsapp_test_instructions.md
flows/: first_deposit.yaml  phone_otp.yaml
migrations/: 20260203000001_init_authz.down.sql
openapi/: user-storage--cuss.yaml  user-storage--staff.yaml  user-storage-bff.json  (+4 more)
(+408 files in other folders)
