[package]
name = "backend-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
backend-core.workspace = true
backend-id.workspace = true
base64.workspace = true
http.workspace = true
ring.workspace = true
serde_json.workspace = true
sha2.workspace = true
tower.workspace = true
swagger.workspace = true

[dev-dependencies]
tokio.workspace = true
