[package]
name = "backend-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
sqlx = { workspace = true, features = ["sqlite", "any"] }
tracing.workspace = true
backend-core.workspace = true
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait.workspace = true
sqlx-utils.workspace = true
serde_json.workspace = true
