[package]
name = "backend-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
deadpool-diesel.workspace = true
tracing.workspace = true
backend-core.workspace = true
tempfile = "3"
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
